ingress/server_ingress/ingress_pointing_to_canary.yaml
# Canary Ingress for Bookify application
# NOTE: For local Minikube testing without editing /etc/hosts, replace MINIKUBE_IP
# in the host(s) below with the output of `minikube ip` (see helper script).
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookify-canary
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
    # Disable SSL redirect for local testing
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.bookify.MINIKUBE_IP.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: bookify-canary-service
                port:
                  number: 5000
